syntax = "proto3";
package CIS.InternalServices.NotificationService.v2;
option csharp_namespace = "CIS.InternalServices.NotificationService.v2";

import "google/protobuf/timestamp.proto";
import "Messages/Types.proto";

message GetDetailedStatisticsRequest {
    repeated NotificationStates States = 1;
    repeated NotificationChannels Channels = 2;
    google.protobuf.Timestamp StatisticsDate = 3;
}

message GetDetailedStatisticsResponse {
    StatisticsData Statistics = 1;
    ResultData Results = 2;
}
